--- a/style.css
+++ b/style.css
@@ -229,6 +229,15 @@ main {
 /* COLOURS */
 
 /* SECTION 7, 8 & 9 STYLING STARTS HERE */
+.section7 {
+  background-color: #fef7e0;
+}
+.section8 {
+  background-color: #edefff;
+}
+.section9 {
+  background-color: #f6ecff;
+}
 .section7,
 .section8,
 .section9 {
@@ -237,68 +246,9 @@ main {
   padding-block: 2.5rem;
   align-items: center;
   border-radius: 20px;
-  background: #edefff;
-  margin: 0 auto;
-  gap: 1.4rem;
-  /* display: none; */
-  flex-direction: column;
-}
-.section8 {
-  background-color: #edefff !important;
-}
-.seven-ii img {
-  width: 100%;
-}
-.seven-i {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 100%;
-}
-.seven-head {
-  color: #202124;
-  font-family: Inter;
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  letter-spacing: -0.72px;
-  width: 381px;
-  /* margin-bottom: 40px; */
-}
-.seven-bio {
-  color: #1e1e1e;
-  font-family: Work Sans;
-  font-size: 0.9rem;
-  font-style: normal;
-  font-weight: 400;
-  margin-bottom: 40px;
-}
-.seven-btn {
-  padding: 10px 18px;
-  border-radius: 8px;
-  background: #202020;
-  text-decoration: none;
-  color: #e5e7eb;
-  font-weight: 600;
-}
-/* section 7 ends here */
-
-/* SECTION 8 & 9 STYLING STARTS HERE */
-.section8 {
-  display: flex;
-  /* padding: 38.382px 47.5px 39.964px 48.5px; */
-  padding-inline: 0.8rem;
-  padding-block: 2.5rem;
-  align-items: center;
-  border-radius: 20px;
-  background: #fef7e0;
   margin: 0 auto;
   gap: 1.4rem;
   flex-direction: column;
-}
-.section7 {
-  background-color: #fef7e0;
 }
 .eight-ii img,
 .seven-ii img,
@@ -350,6 +300,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  /* background-color: green; */
 }
 .intro h3 {
   font-size: 1.4rem;
@@ -362,7 +313,7 @@ main {
 .courses {
   /* width: 100%; */
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr)) !important;
+  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
   gap: 1.5rem;
   /* background-color: gray; */
 }
@@ -373,6 +324,7 @@ main {
   gap: 1.17rem;
   border-radius: 1.4rem;
   background: #fff;
+  /* min-width: 20rem !important; */
 }
 .top {
   display: flex;
